--- a/auction/templates/auctions/includes/auction_div.html
+++ b/auction/templates/auctions/includes/auction_div.html
@@ -1,21 +1,29 @@
 {% load static %}
 
-<div class="auction-item">
-    <div class="auction-head space-between">
-        <div>
-            <div class="gray auction-title">Аукцион #{{auction.id}}</div>
-            <h2>@{{auction.owner}}</h2>
+<a href="{% url 'auctions:auction' group_name=auction.group_name %}" class="no_hook">
+    <div class="elemnt">
+        <div class="auction_background">
+            <div class="auction_elemnt">
+                <div class="auction_text number_auction">
+                    <p>Аукцион <span>#{{auction.id}}</span></p>
+                    <p class="username">@{{auction.owner}}</p>
+                </div>
+                <div class="auction_type">
+                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.00003 2.78183e-07L0.29286 4.55002C0.200012 4.63977 0.12636 4.74632 0.0761114 4.86358C0.0258625 4.98084 -2.8313e-07 5.10652 -2.91169e-07 5.23345C-2.99209e-07 5.36037 0.0258625 5.48605 0.0761114 5.60331C0.12636 5.72057 0.200012 5.82712 0.29286 5.91687C0.385708 6.00662 0.495934 6.07781 0.617246 6.12638C0.738558 6.17495 0.868579 6.19995 0.999885 6.19995C1.13119 6.19995 1.26121 6.17495 1.38252 6.12638C1.50384 6.07781 1.61406 6.00662 1.70691 5.91687L4 3.70034L3.99999 11.0333C3.99999 11.2897 4.10536 11.5356 4.2929 11.7169C4.48044 11.8982 4.7348 12 5.00003 12C5.26526 12 5.51962 11.8982 5.70716 11.7169C5.89471 11.5356 6.00007 11.2897 6.00007 11.0333L6.00007 3.70034L8.29315 5.91687C8.38581 6.00695 8.49597 6.07843 8.61731 6.12721C8.73865 6.17599 8.86876 6.2011 9.00018 6.2011C9.13159 6.2011 9.26171 6.17599 9.38304 6.12721C9.50438 6.07843 9.61455 6.00695 9.7072 5.91687C9.89468 5.73559 10 5.48977 10 5.23345C10 4.97713 9.89468 4.7313 9.7072 4.55002L5.00003 2.78183e-07Z" fill="#3F98FF"/>
+                    </svg>                               
+                </div>
+            </div>
+            <div class="auction_information">
+                <div class="auction_information_text">
+                    <p>Минимальная ставка:</p>
+                    <span>{{auction.min_bet}}$</span>
+                </div>
+                <div class="people_auction">
+                    <p>Участников:</p>
+                    <span class="people"><span style="padding: 0;" id='auction-members-{{auction.id}}'>{{auction.members_count}}</span>/{{auction.max_members}}</span>
+                </div>
+            </div>
         </div>
-        <div>
-            <a href="{% url 'auctions:auction' group_name=auction.group_name %}" class="go-auction">
-                <img src="{% static 'frontend\auction\img\arrow-right.svg' %}" alt="back">
-            </a>
-        </div>
     </div>
-    <div class="min-bet space-between">
-        <div>Минимальная ставка:</div><div>{{auction.min_bet}}$</div>
-    </div>
-    <div class="auction-members space-between">
-        <div class="gray">Участников:</div><div><span id='auction-members-{{auction.id}}'>{{auction.members_count}}</span>/{{auction.max_members}}</div>
-    </div>
-</div>
+</a>
