--- a/auction/templates/auctions/includes/user_div.html
+++ b/auction/templates/auctions/includes/user_div.html
@@ -1,12 +1,12 @@
 {% load static %}
 {% load humanize %}
 
-<div id="user-{{member.id}}" class="user-item">
-    <div class="user-image">
-        <img src="{% if member.image %}{{member.image.url}}{% else %}{% static 'frontend\auction\img\avatar.jpg' %}{% endif %}" alt="user-image">
+<div id="user-{{member.id}}" class="user-card">
+    <div class="user-photo">
+        <img src="{% if member.image %}{{member.image.url}}{% else %}{% static 'casino/assets/img/avatar.jpg' %}{% endif %}" alt="user-image">
     </div>
-    <div class="user-data">
-        <div class="user-nickname">{{member.nickname}}</div>
-        <div class="user-bet">Сумма ставки:&nbsp$<span>{% if bet %}{{bet.deposit | intcomma}}{% else %}0.00{% endif %}</span></div>
+    <div class="user-info">
+        <p class="user-title">@{{member.nickname}}</p>
+        <p class="user-range">Сумма ставки:&nbsp$<span>{% if bet %}{{bet.deposit | intcomma}}{% else %}0.00{% endif %}</span></p>
     </div>
 </div>
