--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -145,7 +145,7 @@
             <p>Список доступных игр</p>
             <div class="background_list">
                 <div class="games_list">
-                    <a href="" class="no_hook">
+                    <a href="{% url 'jackpots:index' %}" class="no_hook">
                         <div class="type_game jekpot">
                             <p class="title_type_game">Джекпот</p>
                             <p class="about_type_game">Описание игры.</p>
