--- a/jackpots/templates/jackpots/jackpot_over.html
+++ b/jackpots/templates/jackpots/jackpot_over.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/jekpot_game.css">
+{% extends "users/base.html" %}
+{% load static %}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'casino/assets/jekpot_game.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
-</head>
-<body>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock css %}
+
+
+{% block content %}
     <!-- <header>
         <div class="header_position"> -->
             <div class="status_bar">
@@ -17,12 +17,12 @@
                         <svg width="10" height="8" viewBox="0 0 10 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M-1.74847e-07 3.99998L3.79169 7.76571C3.86648 7.83999 3.95527 7.89891 4.05298 7.93911C4.1507 7.97931 4.25544 8 4.36121 8C4.46697 8 4.57171 7.97931 4.66943 7.93911C4.76714 7.89891 4.85593 7.83999 4.93072 7.76571C5.00551 7.69143 5.06484 7.60325 5.10532 7.5062C5.14579 7.40915 5.16663 7.30514 5.16663 7.20009C5.16663 7.09505 5.14579 6.99103 5.10532 6.89398C5.06484 6.79693 5.00551 6.70875 4.93072 6.63447L3.08361 4.8L9.19446 4.8C9.4081 4.8 9.61299 4.71571 9.76406 4.56568C9.91513 4.41565 10 4.21216 10 3.99997C10 3.78779 9.91513 3.5843 9.76406 3.43427C9.61299 3.28423 9.4081 3.19995 9.19446 3.19995L3.08361 3.19995L4.93072 1.36548C5.00579 1.29135 5.06536 1.20322 5.10601 1.10615C5.14665 1.00908 5.16758 0.904989 5.16758 0.799858C5.16758 0.694728 5.14665 0.590635 5.10601 0.493565C5.06536 0.396495 5.00579 0.308362 4.93072 0.234237C4.77966 0.084255 4.57481 2.76866e-07 4.3612 2.86203e-07C4.1476 2.9554e-07 3.94275 0.084255 3.79169 0.234237L-1.74847e-07 3.99998Z" fill="#707385"/>
                         </svg>            
-                        <p>Джекпот, <span class="people_to_game">6</span> участников</p>
+                        <p>Джекпот, <span id="members_count" class="people_to_game">{{bets.count}}</span> участников</p>
                     </div>
                 </a>
                 <!-- <a href="/" class="no_hook" onclick="show()"> -->
                     <div class="create_game">
-                        <p>Окончание: <span>19:00 09.11.2024</span></p>
+                        <p>Окончание: <span>Закончен</span></p>
                     </div>
                 <!-- </a> -->
             </div>
@@ -35,7 +35,7 @@
                     <div class="type_game auction_content">
                         <div class="auction_content_about">
                             <p class="title_type_game">Джекпот №1</p>
-                            <p class="quantity">Общий банк <span>$1.000,00</span></p>
+                            <p class="quantity">Общий банк $<span>{{jackpot.common_bank}}</span></p>
                         </div>
                         <div class="auction_iamge">
                             <svg width="143" height="136" viewBox="0 0 143 136" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -188,76 +188,41 @@
                         </div>
                     </div>
                     <div class="change_win">
-                        <div class="box" data-value="150"></div>
-                        <div class="box" data-value="50"></div>
-                        <div class="box" data-value="50"></div>
-                        <div class="box" data-value="50"></div>
-                        <div class="box" data-value="50"></div>
-                        <div class="box" data-value="20"></div>
+                        {% for bet in bets %}
+                            <div id="user-{{bet.user.id}}" class="box" data-value="{{bet.deposit}}"></div>
+                        {% endfor %}
                     </div>
                 </div>
-            <div class="get_bet">
-                <div class="input_text">
-                    <p>Сумма ставки</p>
-                    <div class="input_sum">
-                        <input type="number" placeholder="Введите сумму ставки">
+            </div>
+            <div id="wrap" class="wrap">
+                <div class="toggle"></div>
+                <div class="canvas-label">
+                    <div></div>
+                    <div>Решаем исход...</div>
+                </div>
+                <div id="container">
+                    <canvas id="myChart">
+    
+                    </canvas>
+                </div>
+            </div>
+            <div id="winner-jackpot" class="get_bet">
+                <p>Победитель джекпота</p>
+                <div id="user-winner-cart" class="user-card">
+                    <div class="user-photo">
+                        <img src="{% if winner_bet.user.image %}{{winner_bet.user.image.url}}{% else %}{% static 'casino/assets/img/avatar.jpg' %}{% endif %} " alt="user-{{winner_bet.user.id}}-avatar">
                     </div>
-                    <div class="footer_game">
-                        <a href="/" class="no_hook">
-                            <div class="create_game_auction">
-                                Сделать ставку
-                            </div>
-                        </a>
+                    <div class="user-info">
+                        <p class="user-title">@{{winner_bet.user.nickname}}</p>
+                        <p class="user-range">Сумма ставки: $<span>{{winner_bet.deposit}}</span></p>
                     </div>
                 </div>
             </div>
             <p>Участники джекпота</p>
             <div class="users_list">
-                <div class="user-card">
-                    <div class="user-photo">
-                        <img src="assets/img/img.jpg" alt="">
-                    </div>
-                    <div class="user-info">
-                        <p class="user-title">Никнейм</p>
-                        <p class="user-range">Сумма ставки: <span>$150</span></p>
-                    </div>
-                </div>
-                <div class="user-card">
-                    <div class="user-photo">
-                        <img src="assets/img/img.jpg" alt="">
-                    </div>
-                    <div class="user-info">
-                        <p class="user-title">Никнейм</p>
-                        <p class="user-range">Сумма ставки: <span>$150</span></p>
-                    </div>
-                </div>
-                <div class="user-card">
-                    <div class="user-photo">
-                        <img src="assets/img/img.jpg" alt="">
-                    </div>
-                    <div class="user-info">
-                        <p class="user-title">Никнейм</p>
-                        <p class="user-range">Сумма ставки: <span>$150</span></p>
-                    </div>
-                </div>
-                <div class="user-card">
-                    <div class="user-photo">
-                        <img src="assets/img/img.jpg" alt="">
-                    </div>
-                    <div class="user-info">
-                        <p class="user-title">Никнейм</p>
-                        <p class="user-range">Сумма ставки: <span>$150</span></p>
-                    </div>
-                </div>
-                <div class="user-card">
-                    <div class="user-photo">
-                        <img src="assets/img/img.jpg" alt="">
-                    </div>
-                    <div class="user-info">
-                        <p class="user-title">Никнейм</p>
-                        <p class="user-range">Сумма ставки: <span>$150</span></p>
-                    </div>
-                </div>
+                {% for bet in bets %}
+                    {% include "jackpots/includes/user_div.html" %}                
+                {% endfor %}
             </div>
         </div>
     </div>
@@ -290,7 +255,7 @@
                             </defs>
                         </svg>
                     </div>
-                    <a href="profile.html">
+                    <a href="{% url 'users:profile' %}">
                         <div class="profile keyboard">
                             <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M19.1555 19.9811C19.816 19.8325 20.2108 19.086 19.8818 18.4479C19.1567 17.044 18.0153 15.8092 16.5555 14.8689C14.6747 13.6574 12.369 13 10 13C7.63096 13 5.32533 13.6561 3.44446 14.8689C1.98475 15.8092 0.843301 17.044 0.118231 18.4479C-0.210802 19.086 0.184038 19.8325 0.844498 19.9811C6.88289 21.3396 13.1159 21.3396 19.1543 19.9811" fill="#3D404F"/>
@@ -298,19 +263,24 @@
                             </svg>                       
                         </div>
                     </a>
-                    <div class="settings keyboard">
-                        <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2791 0.152C10.9091 -4.47035e-08 10.4391 0 9.50007 0C8.56107 0 8.09207 -4.47035e-08 7.72107 0.152C7.47696 0.251745 7.25498 0.398782 7.06792 0.584647C6.88085 0.770512 6.73239 0.991536 6.63107 1.235C6.53707 1.458 6.50107 1.719 6.48607 2.098C6.47893 2.3725 6.40214 2.64068 6.2629 2.87736C6.12366 3.11403 5.92654 3.31142 5.69007 3.451C5.44882 3.5851 5.17762 3.65615 4.9016 3.65754C4.62558 3.65894 4.35367 3.59065 4.11107 3.459C3.77307 3.281 3.52807 3.183 3.28607 3.151C2.75665 3.08192 2.22134 3.2242 1.79607 3.547C1.47807 3.789 1.24307 4.193 0.774071 5C0.304071 5.807 0.0700714 6.21 0.0170714 6.605C-0.0529286 7.131 0.0910715 7.663 0.417071 8.084C0.565071 8.276 0.774072 8.437 1.09707 8.639C1.57407 8.936 1.88007 9.442 1.88007 10C1.88007 10.558 1.57407 11.064 1.09807 11.36C0.774071 11.563 0.565071 11.724 0.416071 11.916C0.255638 12.1242 0.137821 12.362 0.0693571 12.6158C0.000893369 12.8696 -0.0168739 13.1343 0.0170714 13.395C0.0700714 13.789 0.304071 14.193 0.774071 15C1.24407 15.807 1.47807 16.21 1.79607 16.453C2.22007 16.776 2.75607 16.918 3.28607 16.849C3.52807 16.817 3.77307 16.719 4.11107 16.541C4.3538 16.4092 4.62589 16.3408 4.9021 16.3422C5.17831 16.3436 5.44969 16.4147 5.69107 16.549C6.17707 16.829 6.46507 17.344 6.48607 17.902C6.50107 18.282 6.53707 18.542 6.63107 18.765C6.83507 19.255 7.22707 19.645 7.72107 19.848C8.09107 20 8.56107 20 9.50007 20C10.4391 20 10.9091 20 11.2791 19.848C11.5232 19.7483 11.7452 19.6012 11.9322 19.4154C12.1193 19.2295 12.2678 19.0085 12.3691 18.765C12.4631 18.542 12.4991 18.282 12.5141 17.902C12.5341 17.344 12.8231 16.828 13.3101 16.549C13.5513 16.4149 13.8225 16.3439 14.0985 16.3425C14.3746 16.3411 14.6465 16.4093 14.8891 16.541C15.2271 16.719 15.4721 16.817 15.7141 16.849C16.2441 16.919 16.7801 16.776 17.2041 16.453C17.5221 16.211 17.7571 15.807 18.2261 15C18.6961 14.193 18.9301 13.79 18.9831 13.395C19.0169 13.1343 18.9989 12.8695 18.9303 12.6157C18.8617 12.3619 18.7437 12.1241 18.5831 11.916C18.4351 11.724 18.2261 11.563 17.9031 11.361C17.4261 11.064 17.1201 10.558 17.1201 10C17.1201 9.442 17.4261 8.936 17.9021 8.64C18.2261 8.437 18.4351 8.276 18.5841 8.084C18.7445 7.87579 18.8623 7.63799 18.9308 7.38422C18.9992 7.13044 19.017 6.86565 18.9831 6.605C18.9301 6.211 18.6961 5.807 18.2261 5C17.7561 4.193 17.5221 3.79 17.2041 3.547C16.7788 3.2242 16.2435 3.08192 15.7141 3.151C15.4721 3.183 15.2271 3.281 14.8891 3.459C14.6463 3.59083 14.3743 3.65922 14.098 3.65782C13.8218 3.65642 13.5504 3.58528 13.3091 3.451C13.0728 3.3113 12.8759 3.11385 12.7368 2.87719C12.5977 2.64052 12.5211 2.37241 12.5141 2.098C12.4991 1.718 12.4631 1.458 12.3691 1.235C12.2678 0.991536 12.1193 0.770512 11.9322 0.584647C11.7452 0.398782 11.5232 0.251745 11.2791 0.152ZM9.50007 13C11.1701 13 12.5231 11.657 12.5231 10C12.5231 8.343 11.1691 7 9.50007 7C7.83107 7 6.47707 8.343 6.47707 10C6.47707 11.657 7.83107 13 9.50007 13Z" fill="#3D404F"/>
-                        </svg>                 
-                    </div>
+                    <a href="#">
+                        <div class="settings keyboard">
+                            <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2791 0.152C10.9091 -4.47035e-08 10.4391 0 9.50007 0C8.56107 0 8.09207 -4.47035e-08 7.72107 0.152C7.47696 0.251745 7.25498 0.398782 7.06792 0.584647C6.88085 0.770512 6.73239 0.991536 6.63107 1.235C6.53707 1.458 6.50107 1.719 6.48607 2.098C6.47893 2.3725 6.40214 2.64068 6.2629 2.87736C6.12366 3.11403 5.92654 3.31142 5.69007 3.451C5.44882 3.5851 5.17762 3.65615 4.9016 3.65754C4.62558 3.65894 4.35367 3.59065 4.11107 3.459C3.77307 3.281 3.52807 3.183 3.28607 3.151C2.75665 3.08192 2.22134 3.2242 1.79607 3.547C1.47807 3.789 1.24307 4.193 0.774071 5C0.304071 5.807 0.0700714 6.21 0.0170714 6.605C-0.0529286 7.131 0.0910715 7.663 0.417071 8.084C0.565071 8.276 0.774072 8.437 1.09707 8.639C1.57407 8.936 1.88007 9.442 1.88007 10C1.88007 10.558 1.57407 11.064 1.09807 11.36C0.774071 11.563 0.565071 11.724 0.416071 11.916C0.255638 12.1242 0.137821 12.362 0.0693571 12.6158C0.000893369 12.8696 -0.0168739 13.1343 0.0170714 13.395C0.0700714 13.789 0.304071 14.193 0.774071 15C1.24407 15.807 1.47807 16.21 1.79607 16.453C2.22007 16.776 2.75607 16.918 3.28607 16.849C3.52807 16.817 3.77307 16.719 4.11107 16.541C4.3538 16.4092 4.62589 16.3408 4.9021 16.3422C5.17831 16.3436 5.44969 16.4147 5.69107 16.549C6.17707 16.829 6.46507 17.344 6.48607 17.902C6.50107 18.282 6.53707 18.542 6.63107 18.765C6.83507 19.255 7.22707 19.645 7.72107 19.848C8.09107 20 8.56107 20 9.50007 20C10.4391 20 10.9091 20 11.2791 19.848C11.5232 19.7483 11.7452 19.6012 11.9322 19.4154C12.1193 19.2295 12.2678 19.0085 12.3691 18.765C12.4631 18.542 12.4991 18.282 12.5141 17.902C12.5341 17.344 12.8231 16.828 13.3101 16.549C13.5513 16.4149 13.8225 16.3439 14.0985 16.3425C14.3746 16.3411 14.6465 16.4093 14.8891 16.541C15.2271 16.719 15.4721 16.817 15.7141 16.849C16.2441 16.919 16.7801 16.776 17.2041 16.453C17.5221 16.211 17.7571 15.807 18.2261 15C18.6961 14.193 18.9301 13.79 18.9831 13.395C19.0169 13.1343 18.9989 12.8695 18.9303 12.6157C18.8617 12.3619 18.7437 12.1241 18.5831 11.916C18.4351 11.724 18.2261 11.563 17.9031 11.361C17.4261 11.064 17.1201 10.558 17.1201 10C17.1201 9.442 17.4261 8.936 17.9021 8.64C18.2261 8.437 18.4351 8.276 18.5841 8.084C18.7445 7.87579 18.8623 7.63799 18.9308 7.38422C18.9992 7.13044 19.017 6.86565 18.9831 6.605C18.9301 6.211 18.6961 5.807 18.2261 5C17.7561 4.193 17.5221 3.79 17.2041 3.547C16.7788 3.2242 16.2435 3.08192 15.7141 3.151C15.4721 3.183 15.2271 3.281 14.8891 3.459C14.6463 3.59083 14.3743 3.65922 14.098 3.65782C13.8218 3.65642 13.5504 3.58528 13.3091 3.451C13.0728 3.3113 12.8759 3.11385 12.7368 2.87719C12.5977 2.64052 12.5211 2.37241 12.5141 2.098C12.4991 1.718 12.4631 1.458 12.3691 1.235C12.2678 0.991536 12.1193 0.770512 11.9322 0.584647C11.7452 0.398782 11.5232 0.251745 11.2791 0.152ZM9.50007 13C11.1701 13 12.5231 11.657 12.5231 10C12.5231 8.343 11.1691 7 9.50007 7C7.83107 7 6.47707 8.343 6.47707 10C6.47707 11.657 7.83107 13 9.50007 13Z" fill="#3D404F"/>
+                            </svg>                 
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
     <script>
+        setTimeout(function() { window.location.reload(true); }, {{refresh_time}});
+
         const container = document.getElementById('container');
         const boxes = document.querySelectorAll('.box');
         const colors = [];
+        const total_data = []
 
         function getRandomColor() {
             const letters = '0123456789ABCDEF';
@@ -325,6 +295,7 @@
             let totalValue = 0;
 
             boxes.forEach((box, index) => {
+                total_data[index] = parseInt(box.dataset.value);
                 totalValue += parseInt(box.dataset.value);
                 if (!colors[index]) {
                     colors[index] = getRandomColor();
@@ -336,10 +307,98 @@
                 const widthPercentage = (totalValue > 0) ? (boxValue / totalValue) * 100 : 0;
                 box.style.width = widthPercentage + '%';
                 box.style.backgroundColor = colors[index];
+                document.getElementById(box.id + '-cart').querySelector('.dot').style.backgroundColor = colors[index];
             });
         }
 
         updateBoxes();
+
+        const cont = document.getElementById('container')
+        const ctx = document.getElementById('myChart');
+        const myDoughnutChart = new Chart(ctx, {
+            type: 'doughnut',
+            data: {
+                datasets: [{
+                    data: total_data,
+                    backgroundColor: colors,
+                    borderWidth: 0,
+                }],
+            },
+            options: {
+                responsive: true,
+                animation: false, 
+                plugins: {
+                    legend: {
+                        position: 'top',
+                    },
+                    tooltip: {
+                        callbacks: {
+                            label: function(tooltipItem) {
+                                return tooltipItem.label + ': ' + tooltipItem.raw;
+                            }
+                        }
+                    }
+                }
+            }
+        });
+
+        let angle = 0;
+        let speed = 10;
+        function rotateChart() {
+            angle += speed;
+            cont.style.transform = `rotate(${angle}deg)`;
+            if (speed > 2) {
+                speed -= 0.03;
+            }
+            requestAnimationFrame(rotateChart); 
+        }
+
+        rotateChart(); 
+
+        let wrap = document.getElementById('wrap');
+        let winner_jackpot = document.getElementById("winner-jackpot");
+
+        setTimeout( function () {
+            var ctr = 0;
+
+            fadeout();
+            window.setTimeout(function(){
+                wrap.style.display = 'none';
+            },100); // time this to fit the animation
+            
+            function fadeout(){
+                wrap.style.opacity = 1 - ('0.'+ctr);
+                wrap.style.transform = 'scale('+(1 - ('0.'+ctr))+')';
+                ctr++;
+                
+                if (ctr < 10) {
+                    requestAnimationFrame(fadeout);
+                } else {
+                    ctr = 0;
+                }
+            }
+        }, 5000)
+
+        setTimeout( function () {
+            var ctr = 0;
+
+            window.setTimeout(function(){
+                winner_jackpot.style.display = 'block';
+            fadein();
+            },0); // do this asap 
+        
+            function fadein(){
+                winner_jackpot.style.opacity = ctr !== 10 ? '0.'+ctr : 1;
+                winner_jackpot.style.transform = ctr !== 10 ? 'scale('+('0.'+ctr)+')' : 'scale(1)';
+                ctr++;
+                
+                if (ctr < 11)
+                requestAnimationFrame(fadein);
+                
+                else
+                ctr = 0;
+            }
+        }, 5100)
+            
     </script>
-</body>
-</html>
+{% endblock content %}
