--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,13 +1,16 @@
-{% extends "users/base.html" %}
-
 {% load static %}
 
-{% block css %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'casino/assets/login.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-{% endblock css %}
-
-{% block content %}
+    <title>Document</title>
+</head>
+<body>
     <!-- <header>
         <div class="header_position"> -->
             <div class="status_bar">
@@ -210,4 +213,5 @@
     </div>
     <footer>
     </footer>
-{% endblock content %}
+</body>
+</html>
