--- a/jackpots/templates/jackpots/includes/user_div.html
+++ b/jackpots/templates/jackpots/includes/user_div.html
@@ -3,7 +3,7 @@
 <div id="user-{{bet.user.id}}-cart" class="user-card">
     <div class="user-photo">
         <p class="dot"></p>
-        <img src="{% if bet.user.image %}{{bet.user.image.url}}{% else %}{% static 'casino/assets/img/avatar.jpg' %}{% endif %} " alt="user-{{bet.user.id}}-avatar">
+        <img src="{{bet.user.image.url}}" alt="user-{{bet.user.id}}-avatar">
     </div>
     <div class="user-info">
         <p class="user-title">@{{bet.user.nickname}}</p>
