--- a/users/templates/users/settings.html
+++ b/users/templates/users/settings.html
@@ -1,15 +1,14 @@
 {% extends "users/base.html" %}
 {% load static %}
-{% load humanize %}
-{% load multiply  %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'casino/assets/profile.css' %}">
+<link rel="stylesheet" href="{% static 'casino/assets/settings.css' %}">
+<script src="assets/script.js"></script>
 {% endblock css %}
 
 {% block content %}
     <div class="status_bar">
-        <p>Ваша сумма ставок: <span>${{user.total_bet}}</span></p>
+        <p>Игроков онлайн: <span>215</span></p>
         <!-- <img src="assets/img/dimond.svg" alt=""> -->
         <svg width="59" height="75" viewBox="0 0 40 75" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g opacity="0.4" filter="url(#filter0_f_0_43)">
@@ -143,33 +142,40 @@
     </div>
     <div class="position_class">
         <div class="background_games">
-            {% for player in top_users %}
-                <div class="background_list">
-                    <div class="games_list">
-                        <div class="type_game balance_content" {% if user == player %}style="border: 1px solid gold"{% endif %}>
-                            <div class="photo_content">
-                                <img style="border-radius: 50%;" src="{{player.image.url}}" width="55px" height="55px" alt="player-picture">
-                            </div>
-                            <div class="balance_content_about">
-                                <p class="title_type_game">@{{player.nickname}}</p>
-                                <p class="date_content"
-                                {% if forloop.counter == 1 %}
-                                style="color: #FFD700;"
-                                {% elif forloop.counter == 2 %}
-                                style="color: #C0C0C0;"
-                                {% elif forloop.counter == 3 %}
-                                style="color: #CD7F32;"
-                                {% else %}
-                                {% endif %}>
-                                <span>{{forloop.counter}}</span> Место</p>
-                            </div>
-                            <div class="status_bar" style="margin-left: auto; font-size: 16px;">
-                                <span>${{player.total_bet}}</span>
-                            </div>
-                        </div>
+            <div class="state_balance">
+                <p class="state_balance_content">Настройки приложения</p>
+            </div>
+            <div class="settings-select">
+                <div class="theme-background">
+                    <div class="theme">
+                        <p>Тема приложения</p>
+                        <p>Темная <span>
+                            <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.59 0.59L6 5.17L1.41 0.589999L5.24537e-07 2L6 8L12 2L10.59 0.59Z" fill="white"/>
+                            </svg>
+                        </span></p>
+                    </div>
+                    <div class="dop-menu-theme">
+                        <p>Светлая</p>
+                        <p>Темная</p>
                     </div>
                 </div>
-            {% endfor %}
+                <div class="lang-background">
+                    <div class="lang">
+                        <p>Язык</p>
+                        <p>Русский <span>
+                            <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.59 0.59L6 5.17L1.41 0.589999L5.24537e-07 2L6 8L12 2L10.59 0.59Z" fill="white"/>
+                            </svg>
+                        </span></p>
+                    </div>
+                    <div class="dop-menu-lang">
+                        <p>Русский</p>
+                        <p>Український</p>
+                        <p>English</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
@@ -178,13 +184,28 @@
         <div class="bottom_bar">
             <div class="center_items">
                 <div class="menu_items">
-                    <a href="{% url 'users:games' %}" class="games keyboard">
-                        <svg width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g filter="url(#filter0_i_0_115)">
-                            <path d="M8 0.5C3.85775 0.5 0.5 3.85775 0.5 8C0.5 12.1423 3.85775 15.5 8 15.5H14C18.1423 15.5 21.5 12.1423 21.5 8C21.5 3.85775 18.1423 0.5 14 0.5H8ZM15.5 10.25C15.5 10.6478 15.342 11.0294 15.0607 11.3107C14.7794 11.592 14.3978 11.75 14 11.75C13.6022 11.75 13.2206 11.592 12.9393 11.3107C12.658 11.0294 12.5 10.6478 12.5 10.25C12.5 9.85218 12.658 9.47064 12.9393 9.18934C13.2206 8.90804 13.6022 8.75 14 8.75C14.3978 8.75 14.7794 8.90804 15.0607 9.18934C15.342 9.47064 15.5 9.85218 15.5 10.25ZM15.5 7.25C15.1022 7.25 14.7206 7.09196 14.4393 6.81066C14.158 6.52936 14 6.14782 14 5.75C14 5.35218 14.158 4.97064 14.4393 4.68934C14.7206 4.40804 15.1022 4.25 15.5 4.25C15.8978 4.25 16.2794 4.40804 16.5607 4.68934C16.842 4.97064 17 5.35218 17 5.75C17 6.14782 16.842 6.52936 16.5607 6.81066C16.2794 7.09196 15.8978 7.25 15.5 7.25ZM6.5 5C6.69891 5 6.88968 5.07902 7.03033 5.21967C7.17098 5.36032 7.25 5.55109 7.25 5.75V7.25H8.75C8.94891 7.25 9.13968 7.32902 9.28033 7.46967C9.42098 7.61032 9.5 7.80109 9.5 8C9.5 8.19891 9.42098 8.38968 9.28033 8.53033C9.13968 8.67098 8.94891 8.75 8.75 8.75H7.25V10.25C7.25 10.4489 7.17098 10.6397 7.03033 10.7803C6.88968 10.921 6.69891 11 6.5 11C6.30109 11 6.11032 10.921 5.96967 10.7803C5.82902 10.6397 5.75 10.4489 5.75 10.25V8.75H4.25C4.05109 8.75 3.86032 8.67098 3.71967 8.53033C3.57902 8.38968 3.5 8.19891 3.5 8C3.5 7.80109 3.57902 7.61032 3.71967 7.46967C3.86032 7.32902 4.05109 7.25 4.25 7.25H5.75V5.75C5.75 5.55109 5.82902 5.36032 5.96967 5.21967C6.11032 5.07902 6.30109 5 6.5 5Z" fill="url(#paint0_linear_0_115)"/>
+                    <a href="{% url 'users:games' %}">
+                        <div class="profile keyboard">
+                            <svg width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 0.5C3.85775 0.5 0.5 3.85775 0.5 8C0.5 12.1423 3.85775 15.5 8 15.5H14C18.1423 15.5 21.5 12.1423 21.5 8C21.5 3.85775 18.1423 0.5 14 0.5H8ZM15.5 10.25C15.5 10.6478 15.342 11.0294 15.0607 11.3107C14.7794 11.592 14.3978 11.75 14 11.75C13.6022 11.75 13.2206 11.592 12.9393 11.3107C12.658 11.0294 12.5 10.6478 12.5 10.25C12.5 9.85218 12.658 9.47064 12.9393 9.18934C13.2206 8.90804 13.6022 8.75 14 8.75C14.3978 8.75 14.7794 8.90804 15.0607 9.18934C15.342 9.47064 15.5 9.85218 15.5 10.25ZM15.5 7.25C15.1022 7.25 14.7206 7.09196 14.4393 6.81066C14.158 6.52936 14 6.14782 14 5.75C14 5.35218 14.158 4.97064 14.4393 4.68934C14.7206 4.40804 15.1022 4.25 15.5 4.25C15.8978 4.25 16.2794 4.40804 16.5607 4.68934C16.842 4.97064 17 5.35218 17 5.75C17 6.14782 16.842 6.52936 16.5607 6.81066C16.2794 7.09196 15.8978 7.25 15.5 7.25ZM6.5 5C6.69891 5 6.88968 5.07902 7.03033 5.21967C7.17098 5.36032 7.25 5.55109 7.25 5.75V7.25H8.75C8.94891 7.25 9.13968 7.32902 9.28033 7.46967C9.42098 7.61032 9.5 7.80109 9.5 8C9.5 8.19891 9.42098 8.38968 9.28033 8.53033C9.13968 8.67098 8.94891 8.75 8.75 8.75H7.25V10.25C7.25 10.4489 7.17098 10.6397 7.03033 10.7803C6.88968 10.921 6.69891 11 6.5 11C6.30109 11 6.11032 10.921 5.96967 10.7803C5.82902 10.6397 5.75 10.4489 5.75 10.25V8.75H4.25C4.05109 8.75 3.86032 8.67098 3.71967 8.53033C3.57902 8.38968 3.5 8.19891 3.5 8C3.5 7.80109 3.57902 7.61032 3.71967 7.46967C3.86032 7.32902 4.05109 7.25 4.25 7.25H5.75V5.75C5.75 5.55109 5.82902 5.36032 5.96967 5.21967C6.11032 5.07902 6.30109 5 6.5 5Z" fill="#3D404F"/>
+                            </svg>                            
+                        </div>
+                    </a>
+                    <a href="{% url 'users:profile' %}">
+                        <div class="settings keyboard">
+                            <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19.1555 19.9811C19.816 19.8325 20.2108 19.086 19.8818 18.4479C19.1567 17.044 18.0153 15.8092 16.5555 14.8689C14.6747 13.6574 12.369 13 10 13C7.63096 13 5.32533 13.6561 3.44446 14.8689C1.98475 15.8092 0.843301 17.044 0.118231 18.4479C-0.210802 19.086 0.184038 19.8325 0.844498 19.9811C6.88289 21.3396 13.1159 21.3396 19.1543 19.9811" fill="#3D404F"/>
+                                <path d="M10 12C13.3137 12 16 9.31371 16 6C16 2.68629 13.3137 0 10 0C6.68629 0 4 2.68629 4 6C4 9.31371 6.68629 12 10 12Z" fill="#3D404F"/>
+                            </svg>                                                    
+                        </div>
+                    </a>
+                    <a href="{% url 'users:settings' %}" class="games keyboard">
+                        <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g filter="url(#filter0_i_0_1514)">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2789 0.152C10.9089 -4.47035e-08 10.4389 0 9.49995 0C8.56095 0 8.09195 -4.47035e-08 7.72095 0.152C7.47684 0.251745 7.25486 0.398782 7.06779 0.584647C6.88073 0.770512 6.73226 0.991536 6.63095 1.235C6.53695 1.458 6.50095 1.719 6.48595 2.098C6.47881 2.3725 6.40202 2.64068 6.26278 2.87736C6.12354 3.11403 5.92642 3.31142 5.68995 3.451C5.44869 3.5851 5.17749 3.65615 4.90148 3.65754C4.62546 3.65894 4.35355 3.59065 4.11095 3.459C3.77295 3.281 3.52795 3.183 3.28595 3.151C2.75653 3.08192 2.22122 3.2242 1.79595 3.547C1.47795 3.789 1.24295 4.193 0.773949 5C0.303949 5.807 0.0699493 6.21 0.0169493 6.605C-0.0530507 7.131 0.0909494 7.663 0.416949 8.084C0.564949 8.276 0.773949 8.437 1.09695 8.639C1.57395 8.936 1.87995 9.442 1.87995 10C1.87995 10.558 1.57395 11.064 1.09795 11.36C0.773949 11.563 0.564949 11.724 0.415949 11.916C0.255516 12.1242 0.137699 12.362 0.069235 12.6158C0.000771299 12.8696 -0.016996 13.1343 0.0169493 13.395C0.0699493 13.789 0.303949 14.193 0.773949 15C1.24395 15.807 1.47795 16.21 1.79595 16.453C2.21995 16.776 2.75595 16.918 3.28595 16.849C3.52795 16.817 3.77295 16.719 4.11095 16.541C4.35367 16.4092 4.62577 16.3408 4.90198 16.3422C5.17819 16.3436 5.44957 16.4147 5.69095 16.549C6.17695 16.829 6.46495 17.344 6.48595 17.902C6.50095 18.282 6.53695 18.542 6.63095 18.765C6.83495 19.255 7.22695 19.645 7.72095 19.848C8.09095 20 8.56095 20 9.49995 20C10.4389 20 10.9089 20 11.2789 19.848C11.5231 19.7483 11.745 19.6012 11.9321 19.4154C12.1192 19.2295 12.2676 19.0085 12.3689 18.765C12.4629 18.542 12.4989 18.282 12.5139 17.902C12.5339 17.344 12.8229 16.828 13.3099 16.549C13.5512 16.4149 13.8224 16.3439 14.0984 16.3425C14.3744 16.3411 14.6463 16.4093 14.8889 16.541C15.2269 16.719 15.472 16.817 15.714 16.849C16.2439 16.919 16.7799 16.776 17.2039 16.453C17.5219 16.211 17.7569 15.807 18.2259 15C18.6959 14.193 18.9299 13.79 18.9829 13.395C19.0168 13.1343 18.9988 12.8695 18.9302 12.6157C18.8616 12.3619 18.7436 12.1241 18.5829 11.916C18.4349 11.724 18.2259 11.563 17.9029 11.361C17.4259 11.064 17.1199 10.558 17.1199 10C17.1199 9.442 17.4259 8.936 17.9019 8.64C18.2259 8.437 18.4349 8.276 18.5839 8.084C18.7444 7.87579 18.8622 7.63799 18.9307 7.38422C18.9991 7.13044 19.0169 6.86565 18.9829 6.605C18.9299 6.211 18.6959 5.807 18.2259 5C17.7559 4.193 17.5219 3.79 17.2039 3.547C16.7787 3.2242 16.2434 3.08192 15.714 3.151C15.472 3.183 15.2269 3.281 14.8889 3.459C14.6462 3.59083 14.3741 3.65922 14.0979 3.65782C13.8217 3.65642 13.5503 3.58528 13.3089 3.451C13.0727 3.3113 12.8757 3.11385 12.7367 2.87719C12.5976 2.64052 12.521 2.37241 12.5139 2.098C12.4989 1.718 12.4629 1.458 12.3689 1.235C12.2676 0.991536 12.1192 0.770512 11.9321 0.584647C11.745 0.398782 11.5231 0.251745 11.2789 0.152ZM9.49995 13C11.1699 13 12.5229 11.657 12.5229 10C12.5229 8.343 11.1689 7 9.49995 7C7.83095 7 6.47695 8.343 6.47695 10C6.47695 11.657 7.83095 13 9.49995 13Z" fill="url(#paint0_linear_0_1514)"/>
                             </g>
                             <defs>
-                            <filter id="filter0_i_0_115" x="0.5" y="-0.5" width="21" height="16" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                            <filter id="filter0_i_0_1514" x="-0.000366211" y="-1" width="19.0001" height="21" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
                             <feFlood flood-opacity="0" result="BackgroundImageFix"/>
                             <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"/>
                             <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
@@ -192,32 +213,29 @@
                             <feGaussianBlur stdDeviation="0.85"/>
                             <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"/>
                             <feColorMatrix type="matrix" values="0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0.69 0"/>
-                            <feBlend mode="overlay" in2="shape" result="effect1_innerShadow_0_115"/>
+                            <feBlend mode="overlay" in2="shape" result="effect1_innerShadow_0_1514"/>
                             </filter>
-                            <linearGradient id="paint0_linear_0_115" x1="10.5197" y1="6.02435" x2="11" y2="22" gradientUnits="userSpaceOnUse">
+                            <linearGradient id="paint0_linear_0_1514" x1="9.0651" y1="7.36579" x2="10.0079" y2="28.6441" gradientUnits="userSpaceOnUse">
                             <stop stop-color="white"/>
                             <stop offset="1" stop-color="#1271FF"/>
                             </linearGradient>
                             </defs>
                         </svg>
                     </a>
-                    <a href="{% url 'users:profile' %}">
-                        <div class="profile keyboard">
-                            <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M19.1555 19.9811C19.816 19.8325 20.2108 19.086 19.8818 18.4479C19.1567 17.044 18.0153 15.8092 16.5555 14.8689C14.6747 13.6574 12.369 13 10 13C7.63096 13 5.32533 13.6561 3.44446 14.8689C1.98475 15.8092 0.843301 17.044 0.118231 18.4479C-0.210802 19.086 0.184038 19.8325 0.844498 19.9811C6.88289 21.3396 13.1159 21.3396 19.1543 19.9811" fill="#3D404F"/>
-                                <path d="M10 12C13.3137 12 16 9.31371 16 6C16 2.68629 13.3137 0 10 0C6.68629 0 4 2.68629 4 6C4 9.31371 6.68629 12 10 12Z" fill="#3D404F"/>
-                            </svg>                       
-                        </div>
-                    </a>
-                    <a href="{% url 'users:settings' %}">
-                        <div class="settings keyboard">
-                            <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2791 0.152C10.9091 -4.47035e-08 10.4391 0 9.50007 0C8.56107 0 8.09207 -4.47035e-08 7.72107 0.152C7.47696 0.251745 7.25498 0.398782 7.06792 0.584647C6.88085 0.770512 6.73239 0.991536 6.63107 1.235C6.53707 1.458 6.50107 1.719 6.48607 2.098C6.47893 2.3725 6.40214 2.64068 6.2629 2.87736C6.12366 3.11403 5.92654 3.31142 5.69007 3.451C5.44882 3.5851 5.17762 3.65615 4.9016 3.65754C4.62558 3.65894 4.35367 3.59065 4.11107 3.459C3.77307 3.281 3.52807 3.183 3.28607 3.151C2.75665 3.08192 2.22134 3.2242 1.79607 3.547C1.47807 3.789 1.24307 4.193 0.774071 5C0.304071 5.807 0.0700714 6.21 0.0170714 6.605C-0.0529286 7.131 0.0910715 7.663 0.417071 8.084C0.565071 8.276 0.774072 8.437 1.09707 8.639C1.57407 8.936 1.88007 9.442 1.88007 10C1.88007 10.558 1.57407 11.064 1.09807 11.36C0.774071 11.563 0.565071 11.724 0.416071 11.916C0.255638 12.1242 0.137821 12.362 0.0693571 12.6158C0.000893369 12.8696 -0.0168739 13.1343 0.0170714 13.395C0.0700714 13.789 0.304071 14.193 0.774071 15C1.24407 15.807 1.47807 16.21 1.79607 16.453C2.22007 16.776 2.75607 16.918 3.28607 16.849C3.52807 16.817 3.77307 16.719 4.11107 16.541C4.3538 16.4092 4.62589 16.3408 4.9021 16.3422C5.17831 16.3436 5.44969 16.4147 5.69107 16.549C6.17707 16.829 6.46507 17.344 6.48607 17.902C6.50107 18.282 6.53707 18.542 6.63107 18.765C6.83507 19.255 7.22707 19.645 7.72107 19.848C8.09107 20 8.56107 20 9.50007 20C10.4391 20 10.9091 20 11.2791 19.848C11.5232 19.7483 11.7452 19.6012 11.9322 19.4154C12.1193 19.2295 12.2678 19.0085 12.3691 18.765C12.4631 18.542 12.4991 18.282 12.5141 17.902C12.5341 17.344 12.8231 16.828 13.3101 16.549C13.5513 16.4149 13.8225 16.3439 14.0985 16.3425C14.3746 16.3411 14.6465 16.4093 14.8891 16.541C15.2271 16.719 15.4721 16.817 15.7141 16.849C16.2441 16.919 16.7801 16.776 17.2041 16.453C17.5221 16.211 17.7571 15.807 18.2261 15C18.6961 14.193 18.9301 13.79 18.9831 13.395C19.0169 13.1343 18.9989 12.8695 18.9303 12.6157C18.8617 12.3619 18.7437 12.1241 18.5831 11.916C18.4351 11.724 18.2261 11.563 17.9031 11.361C17.4261 11.064 17.1201 10.558 17.1201 10C17.1201 9.442 17.4261 8.936 17.9021 8.64C18.2261 8.437 18.4351 8.276 18.5841 8.084C18.7445 7.87579 18.8623 7.63799 18.9308 7.38422C18.9992 7.13044 19.017 6.86565 18.9831 6.605C18.9301 6.211 18.6961 5.807 18.2261 5C17.7561 4.193 17.5221 3.79 17.2041 3.547C16.7788 3.2242 16.2435 3.08192 15.7141 3.151C15.4721 3.183 15.2271 3.281 14.8891 3.459C14.6463 3.59083 14.3743 3.65922 14.098 3.65782C13.8218 3.65642 13.5504 3.58528 13.3091 3.451C13.0728 3.3113 12.8759 3.11385 12.7368 2.87719C12.5977 2.64052 12.5211 2.37241 12.5141 2.098C12.4991 1.718 12.4631 1.458 12.3691 1.235C12.2678 0.991536 12.1193 0.770512 11.9322 0.584647C11.7452 0.398782 11.5232 0.251745 11.2791 0.152ZM9.50007 13C11.1701 13 12.5231 11.657 12.5231 10C12.5231 8.343 11.1691 7 9.50007 7C7.83107 7 6.47707 8.343 6.47707 10C6.47707 11.657 7.83107 13 9.50007 13Z" fill="#3D404F"/>
-                            </svg>                 
-                        </div>
-                    </a>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        let div = document.querySelector('.dop-menu-theme');
+
+        document.querySelector('.theme-background').addEventListener('click', () => {
+        div.style.display = getComputedStyle(div).display == 'block' ? 'none' : 'block';
+    });
+        let div1 = document.querySelector('.dop-menu-lang');
+
+            document.querySelector('.lang-background').addEventListener('click', () => {
+            div1.style.display = getComputedStyle(div1).display == 'block' ? 'none' : 'block';
+    });
+    </script>
 {% endblock content %}
