--- a/static/casino/assets/white_theme.css
+++ b/static/casino/assets/white_theme.css
@@ -3,15 +3,29 @@ body {
     background-color: #EFF0F3;
 }
 
-.background_games {
-    border-top: 1px solid #DADBE2;
+.jekpot_status_bar, .jekpot_games_list {
+    background: linear-gradient(130deg, #ffffff 26%, #62a1ffe6 68%, rgb(187, 214, 255) 90%, rgb(208, 227, 255) 170%, #ffffff 58%, #ffffff 100%)
+}
+.auction_status_bar, .auction_games_list {
+    background: linear-gradient(130deg, rgb(255, 255, 255) 26%, rgb(255, 255, 255) 48%, rgb(215, 159, 79) 90%, white 170%, rgb(233, 197, 161) 58%, rgb(255, 255, 255) 100%)
+}
+.tictaktoe_status_bar {
+    background: linear-gradient(130deg, rgb(255, 255, 255) 26%, #d6acee 90%, #701BA0 125%, #ffffff 58%, rgb(255, 255, 255) 100%)
 }
 
-.title_type_game {
-    color: black;
+.jekpot {
+    background-image: url(../assets/img/jekpot_white.svg);
 }
 
-.about_type_game {
+.aukcion {
+    background-image: url(../assets/img/aukcion_white.svg);
+}
+
+.crestikinoloko {
+    background-image: url(../assets/img/crestiki-noloko_white.svg);
+}
+
+.about_type_game, .quantity, .input_text p, .background_games {
     color: rgba(0, 0, 0, 0.800);
 }
 
@@ -19,18 +33,39 @@ body {
     background-color: #EFF0F3;
 }
 
-.balance_content {
-    background-color: #fff;
+.balance_content, .resend, .history_elemnt, .theme, .dop-menu-theme,
+.lang, .dop-menu-lang, .theme-background, .lang-background, #bet-sum, .players{
+    background-color: #fff !important;
+}
+
+#bet-sum {
+    border:1px solid #DADBE2;
 }
 
 .date_content, .state_balance_content {
     color: #707385;
 }
 
-.title_type_game_content, .sum {
+.title_type_game, .title_type_game_content, .sum, .full_history,
+.games_content_title, .result_game, .settings-select, .user-title, 
+.create_game span, a.no_hook:active, a.no_hook:hover, a.no_hook, .back_button span {
     color: black;
+    font-weight: 500;
+}
+
+.dop-menu-lang p, 
+.dop-menu-theme p {
+    color: rgba(0, 0, 0, 0.712);
+
 }
 
 .resend_link {
     color: #3F98FF;
 }
+
+.button_list {
+    padding-bottom: 10px;
+    border-top: 1px solid #DADBE2;
+    border-bottom: 1px solid #DADBE2;
+}
+
