--- a/users/templates/users/top_players.html
+++ b/users/templates/users/top_players.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="status_bar">
-        <p>Ваша сумма ставок: <span>${{user.total_bet}}</span></p>
+        <p>Всего юзеров: <span>{{count}}</span></p>
         <!-- <img src="assets/img/dimond.svg" alt=""> -->
         <svg width="59" height="75" viewBox="0 0 40 75" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g opacity="0.4" filter="url(#filter0_f_0_43)">
