--- a/auction/templates/auctions/auctions2.html
+++ b/auction/templates/auctions/auctions2.html
@@ -59,7 +59,7 @@
     </div>
     <!-- <header>
         <div class="header_position"> -->
-            <div class="status_bar">
+            <div class="status_bar auction_status_bar">
                 <a href="{% url 'users:games' %}" class="no_hook">
                     <div class="back_button">
                         <svg width="10" height="8" viewBox="0 0 10 8" fill="none" xmlns="http://www.w3.org/2000/svg">
