--- a/static/casino/assets/auction.css
+++ b/static/casino/assets/auction.css
@@ -209,7 +209,7 @@ body {
     justify-content: space-between;
 }
 .active_block {
-    background-color: #3F98FF;
+    background-color: #3F98FF !important;
 
 }
 .rate_block {
