--- a/static/casino/assets/tiktaktok.css
+++ b/static/casino/assets/tiktaktok.css
@@ -16,7 +16,7 @@ body {
     padding: 15px;
 } */
 
-.status_bar {
+.tictaktoe_status_bar {
     padding: 5px 15px 5px 15px;
     justify-content: space-between;
     align-items: center;
@@ -209,7 +209,7 @@ body {
     justify-content: space-between;
 }
 .active_block {
-    background-color: #3F98FF;
+    background-color: #3F98FF !important;
 
 }
 .rate_block {
